--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -13,14 +13,14 @@
 }
 
 .gallery-review-wrapper {
-  // background-image: url('../images/background/mob-bg-@1x-581.jpg');
+  background-image: url('../images/background/mob-bg-@1x-581.jpg');
   background-repeat: repeat;
   background-size: 581px;
   background-position: -125px -5px;
 }
 @supports (background-image: url('data:image/webp')) {
   .gallery-review-wrapper {
-    // background-image: url('../images/background/mob-bg-@1x-581.webp');
+    background-image: url('../images/background/mob-bg-@1x-581.webp');
   }
 }
 @media (min-device-pixel-ratio: 2),
@@ -28,22 +28,27 @@
   (min-resolution: 192dpi),
   (min-resolution: 2dppx) {
   .gallery-review-wrapper {
-    // background-image: url('../images/background/mob-bg-@2x-1162.jpg');
+    background-image: url('../images/background/mob-bg-@2x-1162.jpg');
   }
   @supports (background-image: url('data:image/webp')) {
     .gallery-review-wrapper {
-      // background-image: url('../images/background/mob-bg-@2x-1162.webp');
+      background-image: url('../images/background/mob-bg-@2x-1162.webp');
     }
   }
 }
 @media screen and (min-width: 480px) {
+  .gallery {
+    padding-bottom: 40px;
+  }
   .gallery-review-wrapper {
-    // background-image: url('../images/background/mob-bg-@1x-885.jpg');
+    background-image: url('../images/background/mob-bg-@1x-885.jpg');
     background-size: 885px;
+    padding-bottom: 409px;
+    margin-bottom: -349px;
   }
   @supports (background-image: url('data:image/webp')) {
     .gallery-review-wrapper {
-      // background-image: url('../images/background/mob-bg-@1x-885.webp');
+      background-image: url('../images/background/mob-bg-@1x-885.webp');
     }
   }
 }
@@ -51,24 +56,29 @@
   screen and (min-width: 480px) and (-webkit-min-device-pixel-ratio: 2),
   screen and (min-width: 480px) and (min-resolution: 192dpi),
   screen and (min-width: 480px) and (min-resolution: 2dppx) {
-  // .gallery-review-wrapper {
-  //   background-image: url('../images/background/mob-bg-@2x-1770.jpg');
-  //}
+  .gallery-review-wrapper {
+    background-image: url('../images/background/mob-bg-@2x-1770.jpg');
+  }
   @supports (background-image: url('data:image/webp')) {
     .gallery-review-wrapper {
-      // background-image: url('../images/background/mob-bg-@2x-1770.webp');
+      background-image: url('../images/background/mob-bg-@2x-1770.webp');
     }
   }
 }
 @media screen and (min-width: 768px) {
+  .gallery {
+    padding-bottom: 80px;
+  }
   .gallery-review-wrapper {
-    // background-image: url('../images/background/tab-bg-@1x-963.jpg');
+    background-image: url('../images/background/tab-bg-@1x-963.jpg');
     background-position: -35px -5px;
     background-size: 963px;
+    padding-bottom: 379px;
+    margin-bottom: -298px;
   }
   @supports (background-image: url('data:image/webp')) {
     .gallery-review-wrapper {
-      // background-image: url('../images/background/tab-bg-@1x-963.webp');
+      background-image: url('../images/background/tab-bg-@1x-963.webp');
     }
   }
 }
@@ -76,24 +86,29 @@
   screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2),
   screen and (min-width: 768px) and (min-resolution: 192dpi),
   screen and (min-width: 768px) and (min-resolution: 2dppx) {
-  // .gallery-review-wrapper {
-  //   background-image: url('../images/background/tab-bg-@2x-1926.jpg');
-}
-@supports (background-image: url('data:image/webp')) {
   .gallery-review-wrapper {
-    // background-image: url('../images/background/tab-bg-@2x-1926.webp');
-    // }
-  }
-}
-@media screen and (min-width: 1200px) {
-  .gallery-review-wrapper {
-    // background-image: url('../images/background/desk-bg-@1x-1300.jpg');
-    background-position: -70px -255px;
-    background-size: 1300px;
+    background-image: url('../images/background/tab-bg-@2x-1926.jpg');
   }
   @supports (background-image: url('data:image/webp')) {
     .gallery-review-wrapper {
-      // background-image: url('../images/background/desk-bg-@1x-1300.webp');
+      background-image: url('../images/background/tab-bg-@2x-1926.webp');
+    }
+  }
+}
+@media screen and (min-width: 1200px) {
+  .gallery {
+    padding-bottom: 42px;
+  }
+  .gallery-review-wrapper {
+    background-image: url('../images/background/desk-bg-@1x-1300.jpg');
+    background-position: -70px -255px;
+    background-size: 1300px;
+    padding-bottom: 228px;
+    margin-bottom: -128px;
+  }
+  @supports (background-image: url('data:image/webp')) {
+    .gallery-review-wrapper {
+      background-image: url('../images/background/desk-bg-@1x-1300.webp');
     }
   }
 }
@@ -102,11 +117,11 @@
   screen and (min-width: 1200px) and (min-resolution: 192dpi),
   screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .gallery-review-wrapper {
-    // background-image: url('../images/background/desk-bg-@2x-2600.jpg');
+    background-image: url('../images/background/desk-bg-@2x-2600.jpg');
   }
   @supports (background-image: url('data:image/webp')) {
     .gallery-review-wrapper {
-      // background-image: url('../images/background/desk-bg-@2x-2600.webp');
+      background-image: url('../images/background/desk-bg-@2x-2600.webp');
     }
   }
 }
