Прикрутив одне меню

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -22,19 +22,23 @@
       </ul>
     </nav>
     <!--Бургер меню-->
-    <button type="button" class="header-mobile-menu-open js-open-modal "data-modal="7">
+    <button
+      type="button"
+      class="header-mobile-menu-open js-open-modal"
+      data-modal="7"
+    >
       <svg class="header-mobile-menu-open-ikon" width="32" height="32">
         <use href="./images/sprite.svg#icon-menu-fill"></use>
       </svg>
     </button>
-    <button type="button" class="header-button">
+    <button type="button" class="header-button js-open-modal" data-modal="2">
       Buy now
       <svg class="header-button-icon" width="12" height="12">
         <use href="./images/sprite.svg#icon-arrow-right-bold"></use>
       </svg>
     </button>
   </div>
-  <div class="header-mobile-menu js-menu-container  modal" data-modal="7">
+  <div class="header-mobile-menu js-menu-container modal" data-modal="7">
     <div class="container header-mobile-menu-container">
       <button class="header-mobile-menu-close-btn js-modal-close">
         <svg class="header-mobile-menu-close-icon" width="32" height="32">
@@ -51,10 +55,14 @@
           <a href="#Home" class="header-nav-link-mobile link">Home</a>
         </li>
         <li class="header-item-mobile">
-          <a href="#about" class="header-nav-link-mobile link">How it’s made?</a>
+          <a href="#about" class="header-nav-link-mobile link"
+            >How it’s made?</a
+          >
         </li>
         <li class="header-item-mobile">
-          <a href="#products" class="header-nav-link-mobile link">Our products</a>
+          <a href="#products" class="header-nav-link-mobile link"
+            >Our products</a
+          >
         </li>
         <li class="header-item-mobile">
           <a href="#contacts" class="header-nav-link-mobile link">Contact</a>
