--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,42 +1,63 @@
 <section class="products" id="products">
-    <div class="container products-container">
-<p class="products-natural">100% natural</p>
-<h2 class="products-title">products</h2>
+  <div class="container products-container">
+    <p class="products-natural">100% natural</p>
+    <h2 class="products-title">products</h2>
 
-<ul class="products-list">
-    <div class="products-list-box">
-    <li class="products-item products-item-cream ">
-        <h3 class="products-item-title">ice cream</h3>
-        <p class="products-text products-text-cream">Soft ice cream with a delicate taste. Made with milk, cream, sugar and natural stabilizer</p>
-        <button  class="products-link js-open-modal" data-modal="3" type="button">
-        <svg width="40" height="16">
-            <use href="/src/images/sprite.svg#icon-arrow-right"></use>
-        </svg>
-        </button>
-    </li>
-    </div>
-    <div class="products-list-box">
-    <li class="products-item products-item-coffee">
-        <h3 class="products-item-title">ice coffee</h3>
-        <p class="products-text products-text-coffe">Fragrant invigorating drink created from 100% natural ingredients without the use of preservatives and flavor enhancers</p>
-        <button class="products-link js-open-modal" data-modal="3" type="button">
-        <svg width="40" height="16">
-            <use href="/src/images/sprite.svg#icon-arrow-right"></use>
-        </svg>
-        </button>
-    </li>
-    </div>
-    <div class="products-list-box">
-    <li class="products-item products-item-milkshakes">
-        <h3 class="products-item-title">milkshakes</h3>
-        <p class="products-text products-text-milkshakes">Sweet drinks based on milk and ice cream, supplemented with syrups, fruits, berries and other sweets of your choice</p>
-        <button  class="products-link js-open-modal" data-modal="3" type="button">
-        <svg width="40" height="16">
-            <use href="/src/images/sprite.svg#icon-arrow-right"></use>
-        </svg>
-        </button>
-    </li>
-    </div>
-</ul>
-    </div>
+    <ul class="products-list">
+      <div class="products-list-box">
+        <li class="products-item products-item-cream">
+          <h3 class="products-item-title">ice cream</h3>
+          <p class="products-text products-text-cream">
+            Soft ice cream with a delicate taste. Made with milk, cream, sugar
+            and natural stabilizer
+          </p>
+          <button
+            class="products-link js-open-modal"
+            data-modal="1"
+            type="button"
+          >
+            <svg width="40" height="16">
+              <use href="/src/images/sprite.svg#icon-arrow-right"></use>
+            </svg>
+          </button>
+        </li>
+      </div>
+      <div class="products-list-box">
+        <li class="products-item products-item-coffee">
+          <h3 class="products-item-title">ice coffee</h3>
+          <p class="products-text products-text-coffe">
+            Fragrant invigorating drink created from 100% natural ingredients
+            without the use of preservatives and flavor enhancers
+          </p>
+          <button
+            class="products-link js-open-modal"
+            data-modal="1"
+            type="button"
+          >
+            <svg width="40" height="16">
+              <use href="/src/images/sprite.svg#icon-arrow-right"></use>
+            </svg>
+          </button>
+        </li>
+      </div>
+      <div class="products-list-box">
+        <li class="products-item products-item-milkshakes">
+          <h3 class="products-item-title">milkshakes</h3>
+          <p class="products-text products-text-milkshakes">
+            Sweet drinks based on milk and ice cream, supplemented with syrups,
+            fruits, berries and other sweets of your choice
+          </p>
+          <button
+            class="products-link js-open-modal"
+            data-modal="1"
+            type="button"
+          >
+            <svg width="40" height="16">
+              <use href="/src/images/sprite.svg#icon-arrow-right"></use>
+            </svg>
+          </button>
+        </li>
+      </div>
+    </ul>
+  </div>
 </section>
