--- a/src/partials/modal-ingredients.html
+++ b/src/partials/modal-ingredients.html
@@ -8,7 +8,7 @@
             <use href="./images/sprite.svg#icon-close-line"></use>
           </svg>
       </button>      
-
+ <!-- visually-hidden -->
       <!-- Main section -->
       <h1 class="modal-title">Chololate icecream</h1>
       <section>
@@ -21,7 +21,7 @@
             <img class="modal-img-product" src="./images/modal-product.png" alt="Chololate icecream">
           </div>
         </picture>
-        <picture class="modal-product_2 visually-hidden">
+        <picture class="modal-product_2">
           <div class="modal-img-container modal-ingredient">
             <source srcset="./images/modal-product2.webp 1x, ./images/modal-product2@2x.webp 2x,
                 ./images/modal-product2@3x.webp 3x" media="(min-width:1200px)"
@@ -30,7 +30,7 @@
             <img class="modal-img-product" src="./images/modal-product2.png" alt="Chololate icecream">
           </div>
         </picture>
-        <picture class="modal-product_3 visually-hidden">
+        <picture class="modal-product_3">
           <div class="modal-img-container modal-ingredient">
             <source srcset="./images/modal-product3.webp 1x, ./images/modal-product3@2x.webp 2x,
                  ./images/modal-product3@3x.webp 3x" media="(min-width:1200px)"
