--- a/src/sass/_modal-product-card.scss
+++ b/src/sass/_modal-product-card.scss
@@ -41,19 +41,19 @@
 
 .prod-card .modal-img-container {
   position: absolute;
-  top: -96px;
+  top: -100px;
 }
 
 .modal-product-1,
 .modal-product-2,
 .modal-product-3 {
-  width: 128px;
+  width: 132px;
   display: flex;
   align-items: flex-end;
   justify-content: center;
 
   padding: 20px 0;
-  height: 85px;
+  height: 114px;
 
   border-radius: 15px;
 }
@@ -108,4 +108,11 @@
   background: rgba(248, 210, 78, 0.1);
   border: 1px solid #84A178;
   border-radius: 10px;
+}
+
+.modal-send-form-input:focus,
+.modal-send-form-textarea:focus,
+.modal-send-form-input:active,
+.modal-send-form-textarea:active {
+  border: 2px solid #0A8817;
 }
