Трохи додав посилання на стрілку

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -51,9 +51,10 @@
         alt="Dots"
         class="hero-all-dots"
       />
-      <svg width="40" height="16" class="hero-arrow">
-        <use href="./images/sprite.svg#icon-arrow-right"></use>
-      </svg>
+      <a href="#contacts"
+        ><svg width="40" height="16" class="hero-arrow">
+          <use href="./images/sprite.svg#icon-arrow-right"></use></svg
+      ></a>
     </div>
   </div>
 </section>
