--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -319,6 +319,8 @@
   }
 
   .hero-btn-products {
+    position: relative;
+    z-index: 500;
     font-size: 14px;
     line-height: 18px;
     padding: 12px 34px;
@@ -332,6 +334,8 @@
   }
 
   .hero-btn-how {
+    position: relative;
+    z-index: 600;
     font-size: 14px;
     line-height: 17px;
   }
