--- a/src/sass/_cursor.scss
+++ b/src/sass/_cursor.scss
@@ -20,9 +20,8 @@ a,
 button,
 textarea,
 input,
-.header-button,
-.swiper,
-.js-modal-close {
+svg,
+.swiper .mySwiper1 {
   cursor: url('../images/cursor/cursor-pointer-@1x.png'), auto;
 
   @supports (cursor: url('data:image/webp'), auto) {
