add button to top

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -12,11 +12,10 @@
 @import './footer';
 @import './cursor';
 @import './modal';
-
+@import './_arrow_to_top.scss';
 @import './modal-all';
 @import './modal-ingredients';
 @import './modal-product-card';
 @import './modal-read-more';
 @import './modal-location';
 @import './modal-franchise';
-
