modal-ingredients+modal-product-card 25.01
Замінено пошкоджений код

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -8,7 +8,7 @@
     <li class="products-item products-item-cream ">
         <h3 class="products-item-title">ice cream</h3>
         <p class="products-text products-text-cream">Soft ice cream with a delicate taste. Made with milk, cream, sugar and natural stabilizer</p>
-        <button  class="products-link js-open-modal marker1" data-modal="1" type="button">
+        <button  class="products-link js-open-modal" data-modal="0" type="button">
         <svg width="40" height="16">
             <use href="/src/images/sprite.svg#icon-arrow-right"></use>
         </svg>
@@ -19,7 +19,7 @@
     <li class="products-item products-item-coffee">
         <h3 class="products-item-title">ice coffee</h3>
         <p class="products-text products-text-coffe">Fragrant invigorating drink created from 100% natural ingredients without the use of preservatives and flavor enhancers</p>
-        <button class="products-link js-open-modal marker2" data-modal="1" type="button">
+        <button class="products-link js-open-modal" data-modal="1" type="button">
         <svg width="40" height="16">
             <use href="/src/images/sprite.svg#icon-arrow-right"></use>
         </svg>
@@ -30,7 +30,7 @@
     <li class="products-item products-item-milkshakes">
         <h3 class="products-item-title">milkshakes</h3>
         <p class="products-text products-text-milkshakes">Sweet drinks based on milk and ice cream, supplemented with syrups, fruits, berries and other sweets of your choice</p>
-        <button  class="products-link js-open-modal marker3" data-modal="1" type="button">
+        <button  class="products-link js-open-modal" data-modal="6" type="button">
         <svg width="40" height="16">
             <use href="/src/images/sprite.svg#icon-arrow-right"></use>
         </svg>
