--- a/src/partials/modal-product-card.html
+++ b/src/partials/modal-product-card.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-  <!-- Product card -->
+
+  <!-- PRODUCT CARD -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    
   <body>
     <div class="modal container prod-card" data-modal="2">
       <button type="button" class="modal-close-btn js-modal-close">
@@ -172,4 +173,3 @@
     <!-- Overlay modal window -->
     <div class="overlay js-overlay-modal"></div>
   </body>
-</html>
