--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -17,6 +17,8 @@
   background-repeat: repeat;
   background-size: 581px;
   background-position: -125px -5px;
+  padding-bottom: 409px;
+  margin-bottom: -349px;
 }
 @supports (background-image: url('data:image/webp')) {
   .gallery-review-wrapper {
