--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,7 +1,7 @@
 <section class="about" id="about">
   <div class="container about-container">
     <p class="about-lable">tradition and love</p>
-    <h2 class="about-title">how it’s made?</h2>
+    <h2 class="about-title wow animate__animated animate__wobble" data-wow-delay="1000ms">how it’s made?</h2>
     <div class="about-tablet-position">
     <picture class="about-picture">
       <source
