--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,5 +1,5 @@
 <section class="section-contacts" id="contacts">
-  <div class="container for-contacts">
+  <div class="container for-contacts wow animate__animated animate__zoomIn" data-wow-delay="1000ms">
     <h2 class="visually-hidden">Contacts</h2>
     <ul class="list-contacts">
       <li class="info-contacts">
