--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header id="home">
   <div class="conteiner header-main-nav">
     <a href="#home" class="header-logo link">
-      <svg class="header-logo-icon">
+      <svg class="header-logo-icon wow animate__animated animate__heartBeat" data-wow-delay="1500ms">
         <use href="./images/sprite.svg#icon-Logo"></use>
       </svg>
     </a>
