--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -3,19 +3,19 @@
     <h2 class="visibility-hidden">Advantages</h2>
     <ul class="adv-list-cow">
       <li class="adv-item-cow">
-        <p class="adv-figure">721</p>
+        <p class="adv-figure wow animate__animated animate__pulse" data-wow-delay="500ms">721</p>
         <p class="adv-figure-text">
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </p>
       </li>
       <li class="adv-item-cow">
-        <p class="adv-figure">16kg</p>
+        <p class="adv-figure wow animate__animated animate__pulse" data-wow-delay="1000ms">16kg</p>
         <p class="adv-figure-text">
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </p>
       </li>
       <li class="adv-item-cow">
-        <p class="adv-figure">84</p>
+        <p class="adv-figure wow animate__animated animate__pulse" data-wow-delay="1500ms">84</p>
         <p class="adv-figure-text">
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </p>
