--- a/src/sass/_arrow_to_top.scss
+++ b/src/sass/_arrow_to_top.scss
@@ -1,6 +1,9 @@
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .arrow-to-top-image {
+    display: block;
     width: 58px;
+    height: 58px;
+    padding: 0;
   }
   .arrow-to-top {
     display: block;
@@ -10,5 +13,10 @@
     bottom: 40px;
     right: 40px;
     position: fixed;
+  }
+}
+@media screen and (max-width: 767px) {
+  .arrow-to-top-image {
+    display: none;
   }
 }
