--- a/src/partials/arrow_to_top.html
+++ b/src/partials/arrow_to_top.html
@@ -1,13 +1,7 @@
-<!-- <div class="arrow-to-top" id="toTop">
-  <a href="#"
-    ><img class="arrow-to-top-image" src="./images/arrow.svg" att="TOP"
-  /></a>
-</div> -->
 <div class="arrow-to-top" id="toTop">
-  <a href="#" 
-    >
+  <a href="#">
     <svg class="arrow-to-top-image" att="TOP">
       <use class="fill-top" href="./images/sprite.svg#icon-arrow-to-top"></use>
     </svg>
-</a>
+  </a>
 </div>
