--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -87,20 +87,18 @@
       </li>
     </ul>
     <div class="contacts-buttons-wrapper">
-      <a href=""
-        ><button type="button" class="contacts-btn js-open-modal "data-modal="4">
+      <button type="button" class="contacts-btn js-open-modal "data-modal="4">
           Our Locations
           <svg width="12" height="12">
             <use href="./images/sprite.svg#icon-arrow-right-bold"></use>
           </svg></button
-      ></a>
-      <a href=""
-        ><button type="button" class="contacts-button js-open-modal "data-modal="5">
+      >
+      <button type="button" class="contacts-button js-open-modal "data-modal="5">
           Franchise
           <svg width="12" height="12">
             <use href="./images/sprite.svg#icon-arrow-right-bold"></use>
           </svg></button
-      ></a>
+      >
     </div>
 
 </section>
