--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -18,7 +18,7 @@
         </div>
         <ul class="menu-contacts">
           <li class="menu-item-contacts">
-            <a href="tel:+61(0) 383 766 284" class="contacts-phone-mail"
+            <a href="tel:+610383766284" class="contacts-phone-mail"
               >+61(0) 383 766 284</a
             >
           </li>
@@ -47,7 +47,7 @@
         </div>
         <ul class="menu-contacts">
           <li class="menu-item-contacts">
-            <a href="tel:+61(0) 383 766 284" class="contacts-phone-mail"
+            <a href="tel:+610383766284" class="contacts-phone-mail"
               >+61(0) 383 766 284</a
             >
           </li>
@@ -74,7 +74,7 @@
         </div>
         <ul class="menu-contacts">
           <li class="menu-item-contacts">
-            <a href="tel:+61(0) 383 766 284" class="contacts-phone-mail"
+            <a href="tel:+610383766284" class="contacts-phone-mail"
               >+61(0) 383 766 284</a
             >
           </li>
