--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,9 +1,12 @@
 p {
   margin: 0;
 }
-// .footer-body {
-//   background-color: #84a178;
-// }
+.footer-body {
+  @media screen and (min-width: 1200px) {
+    padding-top: 120px;
+  }
+}
+
 .footer-title-first {
   font-family: var(--primary-font);
   font-style: normal;
@@ -28,7 +31,6 @@ p {
     font-size: 30px;
     line-height: 37px;
     width: 504px;
-    padding-top: 120px;
   }
 }
 .footer-title-secondary {
