--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -2,6 +2,12 @@ p {
   margin: 0;
 }
 .footer-body {
+  @media screen and (max-width: 767px) {
+    padding-top: 60px;
+  }
+  @media screen and (min-width: 768px) {
+    padding-top: 40px;
+  }
   @media screen and (min-width: 1200px) {
     padding-top: 120px;
   }
@@ -14,7 +20,6 @@ p {
   font-size: 18px;
   line-height: 22px;
   text-transform: uppercase;
-  padding-top: 60px;
   margin-bottom: 16px;
   color: #fcfcfc;
   display: inline-block;
@@ -24,7 +29,6 @@ p {
     line-height: 32px;
     letter-spacing: 0.04em;
     width: 352px;
-    padding-top: 40px;
   }
   @media screen and (min-width: 1200px) {
     font-weight: 400;
