--- a/src/partials/arrow_to_top.html
+++ b/src/partials/arrow_to_top.html
@@ -1,6 +1,6 @@
 <div class="arrow-to-top" id="toTop">
   <a href="#">
-    <svg class="arrow-to-top-image" alt="TOP">
+    <svg class="arrow-to-top-image">
       <use class="fill-top" href="./images/sprite.svg#icon-arrow-to-top"></use>
     </svg>
   </a>
