--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -9,8 +9,8 @@
     </h2>
 
     <ul class="products-list">
-      <div class="products-list-box">
-        <li class="products-item products-item-cream">
+      <li class="products-list-box">
+        <div class="products-item products-item-cream">
           <h3 class="products-item-title">ice cream</h3>
           <p class="products-text products-text-cream">
             Soft ice cream with a delicate taste. Made with milk, cream, sugar
@@ -25,10 +25,11 @@
               <use href="/src/images/sprite.svg#icon-arrow-right"></use>
             </svg>
           </button>
-        </li>
-      </div>
-      <div class="products-list-box">
-        <li class="products-item products-item-coffee">
+        </div>
+      </li>
+
+      <li class="products-list-box">
+        <div class="products-item products-item-coffee">
           <h3 class="products-item-title">ice coffee</h3>
           <p class="products-text products-text-coffe">
             Fragrant invigorating drink created from 100% natural ingredients
@@ -43,10 +44,11 @@
               <use href="/src/images/sprite.svg#icon-arrow-right"></use>
             </svg>
           </button>
-        </li>
-      </div>
-      <div class="products-list-box">
-        <li class="products-item products-item-milkshakes">
+        </div>
+      </li>
+
+      <li class="products-list-box">
+        <div class="products-item products-item-milkshakes">
           <h3 class="products-item-title">milkshakes</h3>
           <p class="products-text products-text-milkshakes">
             Sweet drinks based on milk and ice cream, supplemented with syrups,
@@ -61,8 +63,8 @@
               <use href="/src/images/sprite.svg#icon-arrow-right"></use>
             </svg>
           </button>
-        </li>
-      </div>
+        </div>
+      </li>
     </ul>
   </div>
 </section>
